# 8-bit-game

./: .gitignore  CMakeLists.txt  Move.cpp  Move.h  Shoot.cpp  Shoot.h  main.cpp
libraries/SFML/: Makefile  SFML.cbp  SFMLSharedTargets.cmake  cmake_install.cmake
libraries/SFML/src/SFML/: Makefile  cmake_install.cmake
libraries/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
libraries/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
libraries/SFML/src/SFML/Main/: Makefile  cmake_install.cmake
libraries/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
libraries/SFML/src/SFML/System/: Makefile  cmake_install.cmake
libraries/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
